<resources>
    <string name="app_name">Lab02</string>
    <string name="enter_a_URL">Process the URL</string>
    <string name="list_poems">List poems</string>
    <string name="quit">Quit</string>
    <string name="url_here">URL...</string>
    <string name="main_menu_show_names_of_links">Available Links</string>
    <string name="link_1">http://www.cs.bilkent.edu.tr/~david/housman.txt</string>
    <string name="link_2">http://www.cs.bilkent.edu.tr/~david/housman.htm</string>
    <string name="link_3">http://www.cs.bilkent.edu.tr/~david/index.html</string>
    <string name="select_poem_number">Select Poem Number</string>
    <string name="poem_index">Poem Index...</string>
    <string name="show_poem">Show the poem</string>
</resources>
